# TimetableForTvApp

./: .gitignore  README.md  package-lock.json
.github/workflows/: cd-main.yml  ci-feature.yml  ci.yml
admin-panel/: ELECTRON_BUILD.md  middleware.ts  next.config.ts  package-lock.json  package.json  pkg.config.json  server.js
admin-panel/app/: globals.css  layout.tsx  page.tsx
admin-panel/app/accounts/: page.tsx
admin-panel/app/dashboard/: data.json  page.tsx
admin-panel/app/media/: page.tsx
admin-panel/components/: auth-guard.tsx
admin-panel/electron/: main.js  main.ts  preload.js
admin-panel/lib/: api.ts  auth.ts
admin-panel/scripts/: clean-dist.js
admin-panel/src-tauri/: Cargo.toml  tauri.conf.json
admin-panel/src-tauri/src/: github.rs  lib.rs  mdns_service.rs  update_server.rs
backend/: .gitignore  README.md  backend.spec  build.bat  database.py  init_db.py  main.py  manage_users.py  migrate.py  models.py  requirements.txt  run_backend.bat  run_server.py  schemas.py  timetable.db-shm  timetable.db-wal
backend/tests/: locustfile.py
frontend/: .gitignore  ELECTRON_BUILD.md  next.config.ts  package-lock.json  package.json  pkg.config.json  server.js
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: current-time.tsx  media-player.tsx  news-ticker.tsx  schedule-appbar.tsx  schedule-sidebar.tsx  week-schedule-table.tsx
frontend/electron/: main.ts  preload.ts  tsconfig.json
frontend/hooks/: use-video-glow.ts
frontend/lib/: api.ts
frontend/scripts/: clean-dist.js
frontend/src-tauri/: Cargo.toml  tauri.conf.json  timetable.db  timetable.db-shm  timetable.db-wal
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/src/: lib.rs  mdns_discovery.rs
frontend/tests/: load-test.js
(+19 files in other folders)
