[package]
name = "Timetable_Control_Panel"
version = "1.1.0"
description = "Timetable"
authors = ["eachboy"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"

# HTTP клиент для запросов к GitHub API
reqwest = { version = "0.12", features = ["json", "stream"] }

# Async runtime
tokio = { version = "1", features = ["full"] }

# mDNS для объявления себя в локальной сети
mdns-sd = "0.11"

# Лёгкий HTTP сервер для раздачи обновлений
tiny_http = "0.12"

# Для работы с путями и файлами
dirs = "5"
