[package]
name = "Timetable"
version = "1.1.1"
description = "eachboy"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.3", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2.3.5"

# Updater plugin
tauri-plugin-updater = "2"

# url::Url используется в lib.rs для парсинга endpoint-а
url = "2"

# mDNS для поиска Admin Panel в локальной сети
mdns-sd = "0.11"

# HTTP клиент
reqwest = { version = "0.12", features = ["json"] }

# Async runtime
tokio = { version = "1", features = ["full"] }
